Fixed padding and overflow in grid container

--- a/client/src/components/molecules/Panel/Panel.scss
+++ b/client/src/components/molecules/Panel/Panel.scss
@@ -3,7 +3,6 @@
   background: #f3f4f6;
   border-radius: 10px;
   width: 100%;
-  overflow: hidden;
 
   &__header {
     display: flex;
@@ -58,8 +57,9 @@
   }
 
   &__content {
+    overflow: hidden;
     > div {
-      margin: 0 20px 20px;
+      margin: 16px;
     }
   }
 
